Update controllers